--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     font-size: 20px;
     padding: 5px;
     color: #fff;
+    cursor: pointer;
 }
 
 .container {
@@ -28,12 +29,14 @@ body {
     background-color: #ff0000;
     text-align: center;
     padding: 100px;
+    cursor: pointer;
 }
 
 #player2 {
     background-color: #0000ff;
     text-align: center;
     padding: 100px;
+    cursor: pointer;
 }
 
 p {
@@ -41,11 +44,13 @@ p {
     color: #fff;
     outline: none;
     text-transform: capitalize;
+    cursor: text;
 }
 
 h1 {
     font-size: 100px;
     color: #fff;
+    cursor: pointer;
 }
 
 .reset-all {
@@ -59,4 +64,5 @@ h1 {
     font-size: 20px;
     padding: 5px;
     color: #fff;
+    cursor: pointer;
 }
