--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ h1 {
 
 .reset-all {
     background-color: #008000;
-    padding: 5px;
-    margin: -20px 500px 0 500px;
+    /* padding: 5px; */
+    margin: -60px 500px 0 500px;
     text-align: center;
 }
 
